# light_neural_network

./: .clang-format  .editorconfig  .gitignore  files.py  meson.build
include/: io_exception.h  lnn_exception.h
include/opencl/: arg.h  buffer_arg.h  buffer_array.h  cache_arg.h  calling.h  cl_exception.h  device.h  file_kernel_provider.h  kernel.h  kernel_provider.h  opencl.h  program.h  range.h  range_1d.h  range_2d.h  range_3d.h  scalar_arg.h
src/: io_exception.cc  lnn_exception.cc
src/opencl/: buffer_arg.cc  cache_arg.cc  calling.cc  cl_exception.cc  device.cc  file_kernel_provider.cc  kernel.cc  program.cc  range_1d.cc  range_2d.cc  range_3d.cc
